linked css & bootstrap

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
 
     <title>Crystal Game!</title>
+    <link rel="stylesheet" type="text/css" href="../unit-4-game/assets/css/reset.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" type="text/css" href="../unit-4-game/assets/css/style.css">
+
 </head>
+
 <body>
 
 
-    <script src= "../unit-4-game/assets/javascript/game.js"></script>
+    <script src="../unit-4-game/assets/javascript/game.js"></script>
 </body>
+
 </html>
