styled, need to add functionality of game

--- a/index.html
+++ b/index.html
@@ -15,6 +15,42 @@
 </head>
 
 <body>
+    <div class="jumbotron text-center border border-info">
+        <h1>Crystal Game!</h1>
+    </div>
+
+    <div class="card rounded" id="main-box">
+        <div class="card list-inline-center border-info rounded" id="crystal-box">
+            <div class="d-flex justify-content-center">
+                <img id="red" src="../unit-4-game/assets/images/Red.JPG">
+                <img id="white" src="../unit-4-game/assets/images/White.JPG">
+                <img id="green" src="../unit-4-game/assets/images/Green.JPG">
+                <img id="yellow" src="../unit-4-game/assets/images/Yellow.JPG">
+            </div>
+        </div>
+        <br>
+        <div class="d-flex justify-content-center border border-info rounded">
+            <div class="col-sm-6 d-flex justify-content-center border-info rounded">
+                <h2>Counter:</h2>
+            </div>
+            <div class="col-sm-6 d-flex justify-content-center border-info rounded">
+                <h2>Total:</h2>
+            </div>
+
+        </div>
+        <br>
+        <div class="d-flex justify-content-center border border-info rounded">
+            <div class="col-sm-6 d-flex justify-content-center border-info rounded">
+                <h2>Wins:</h2>
+            </div>
+            <div class="col-sm-6 d-flex justify-content-center border-info rounded">
+                <h2>Losses:</h2>
+            </div>
+
+        </div>
+
+    </div>
+
 
 
     <script src="../unit-4-game/assets/javascript/game.js"></script>
